Whitespace on the left fixed. 100vw to 100%

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,12 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .service-textfield{
     background-color: peachpuff;
     border-color: #FF7477;
@@ -22,7 +31,7 @@
 
 .main-content{
     background-color: lightyellow;
-    max-width: 100vw;
+    max-width: 100%;
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
