--- a/src/app/slideshow/slideshow.component.css
+++ b/src/app/slideshow/slideshow.component.css
@@ -1,5 +1,5 @@
 .pictureNavbar{
-    width: 100vw;
+    width: 100%;
     margin-top: 4vw;
     margin-right: 0pt;
     position: absolute;
@@ -44,9 +44,8 @@
 }
 
 .slideshow-container {
-    max-width: 100vw;
+    width: 100%;
     position: relative;
-    margin: auto;
 }
 
 .prev, .next {
